--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://martin15071979.github.io/ReactProyectoFinalMartinCuitino/",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
